# multi-source-candidate-transformer

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: custom_config_recruiter.json  default_schema.json
data/output/: canonical_default.json  health_report.json  projected_custom_config.json  projected_example_config.json
data/samples/: ats_blob.json  garbage_source.json  recruiter_export.csv  recruiter_notes_jane.txt  resume_jane_doe.txt
data/samples/github_cache/: janedoe.json
data/samples_formats/: resume_jane_doe.docx
data/skills/: skill_aliases.json
scripts/: build_design_doc.py  generate_samples.py
src/transformer/: cli.py  confidence.py  config_models.py  matching.py  merge.py  models.py  pipeline.py  projection.py  validation.py
src/transformer/normalize/: __init__.py  country.py  date.py  links.py  name.py  phone.py  skills.py
src/transformer/sources/: __init__.py  ats_json.py  base.py  github_api.py  recruiter_csv.py  recruiter_notes.py  registry.py  resume.py
tests/: test_merge.py  test_normalize.py  test_pipeline_golden.py  test_projection.py  test_robustness.py
webui/: app.py
webui/templates/: index.html
