[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "candidate-transformer"
version = "0.1.0"
description = "Multi-source candidate data transformer: fuse messy sources into one canonical, provenance-tracked profile."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Omprakash Tiwari", email = "omprakashtiwari1515@gmail.com" }]
dependencies = [
    "pydantic>=2.5",
    "phonenumbers>=8.13",
    "python-dateutil>=2.8",
    "pycountry>=23.12",
    "rapidfuzz>=3.6",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "fpdf2>=2.7",
]

[project.scripts]
transform = "transformer.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
